# mag-rcp-server

./: .env.example  .gitignore  .ruff.toml  CLAUDE.md  CLAUDE_CODE_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_SETUP.md  INSTALLATION.md  MULTIPLE_PROJECTS.md  QUICK_START_CLAUDE.md  README.md  claude_code_mcp_config.json  claude_desktop_config.json  generate-claude-config.ps1  generate-multi-project-config.ps1  install.bat  install.ps1  mcp.json  pyproject.toml  reinstall.bat
.claude/: settings.local.json
src/mag/: __init__.py  config.py  server.py
src/mag/indexer/: __init__.py  chunker.py  discovery.py  embedder.py  parser.py
src/mag/llm/: __init__.py  ollama_client.py
src/mag/prompts/: __init__.py  architecture.py  code_review.py
src/mag/resources/: __init__.py  codebase_indexed.py  stats.py
src/mag/retrieval/: __init__.py  vector_store.py
src/mag/scripts/: __init__.py  index_codebase.py
src/mag/tools/: __init__.py  explain_symbol.py  get_file.py  list_files.py  search_code.py
test_csharp_code/: IUserRepository.cs  UserService.cs
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_integration.py  test_prompts.py  test_resources.py  test_server.py
tests/test_indexer/: __init__.py  test_chunker.py  test_discovery.py  test_embedder.py  test_parser.py
tests/test_llm/: __init__.py  test_ollama_client.py
tests/test_retrieval/: __init__.py  test_vector_store.py
tests/test_tools/: test_mcp_tools.py
